--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "express": "~4.15.2",
     "mongoose": "^4.9.4",
     "morgan": "~1.8.1",
+    "password-hash": "^1.2.2",
     "serve-favicon": "~2.4.2"
   }
 }
