--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node ./bin/www",
+    "test": "SET PORT=3001 & SET DB=test & mocha"
   },
   "dependencies": {
     "body-parser": "~1.17.1",
@@ -15,6 +16,12 @@
     "mongoose": "^4.9.4",
     "morgan": "~1.8.1",
     "password-hash": "^1.2.2",
-    "serve-favicon": "~2.4.2"
+    "serve-favicon": "~2.4.2",
+    "uuid": "^3.0.1"
+  },
+  "devDependencies": {
+    "chai": "^3.5.0",
+    "mocha": "^3.2.0",
+    "superagent": "^3.5.2"
   }
 }
